todo, remove unneeded imports

--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 
-* Improve db so that data is split over several files
 
-* Improve handling of html
+# TODO
+
+## Improve db so that data is split over several files
+
+## Improve handling of html
